# 8051-ISA-Assembler

./: CMakeLists.txt  README.md
examples/: add.asm  branch.asm
include/: assembler.hpp  cpu.hpp
spec/: opcodes.csv
src/: assembler.cpp  cpu.cpp  main.cpp
